[project]
name = "kns_indexer"
version = "0.1.0"
description = "KNS Indexer is a fully decentralized, open-source indexer for Keeta Name Service (KNS) - an ENS-like naming system built on the Keeta blockchain."
readme = "README.md"
authors = [
    { name = "Vladyslav Timofeev", email = "timofeevvladyslav49@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "orjson>=3.11.4",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "tldextract>=5.3.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
